# libstablematching

./: .travis.yml  CMakeLists.txt  README.md
cmake_modules/: FindCPLEX.cmake
instances/: test.instance
scripts/: find_roundingsat_fails.zsh  make_roundingsat_tests.zsh
src/: Agent.cpp  Agent.h  CMakeLists.txt  convert.cpp  convert_wpmaxsat.cpp  graph.cpp  graph.h  lattice.cpp  lattice.h  main.cpp  matching.h  pbo.cpp  pbo_convert.cpp  pp.cpp  smti.cpp  smti.h  smti_cplex.cpp  smti_encodings.cpp  smti_grp.cpp  smti_ip.cpp  smti_preprocessing.cpp  union_find.h
test/: CMakeLists.txt  grp-test-medium.instance  grp-test-small-unbalanced.instance  grp-test-small.instance  matchings.cpp  smti_basic.cpp  smti_grp.cpp  smti_ip.cpp  smti_pbo.cpp  smti_preprocess.cpp  test-ties-2.instance  test-ties.instance  test-tiny.instance
