CMAKE_MINIMUM_REQUIRED (VERSION 3.4)
PROJECT (smti-encode)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")
CMAKE_POLICY(SET CMP0074 NEW)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Wshadow")

FIND_PACKAGE(Threads REQUIRED)
IF(CMAKE_COMPILER_IS_GNUCXX)
  # FindThreads picks up -lpthread but not -pthread
  SET(CMAKE_CXX_FLAGS "-pthread ${CMAKE_CXX_FLAGS}")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FIND_PACKAGE(CPLEX)
IF(CPLEX_FOUND)
  ADD_DEFINITIONS(-DCPLEX_FOUND -DIL_STD)
  INCLUDE_DIRECTORIES(SYSTEM ${CPLEX_INCLUDE_DIR} ${CPLEX_CONCERT_INCLUDE_DIR})
  LINK_DIRECTORIES(${CPLEX_LIBRARY_PATH} ${CPLEX_ILO_LIBRARY_PATH} ${CPLEX_CONCERT_LIBRARY_PATH})
ENDIF(CPLEX_FOUND)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
ADD_SUBDIRECTORY(src)

IF(TESTSUITE)
  ENABLE_TESTING()
  INCLUDE(CTest)
  INCLUDE(Catch)
  ADD_SUBDIRECTORY(test)
ENDIF(TESTSUITE)
