INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(SOURCES
  Agent.cpp
  smti.cpp
  )

ADD_LIBRARY(smti ${SOURCES})
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main smti)
ADD_EXECUTABLE(convert convert.cpp)
TARGET_LINK_LIBRARIES(convert smti)
ADD_EXECUTABLE(pbo pbo.cpp)
TARGET_LINK_LIBRARIES(pbo smti)

