INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(SOURCES
  Agent.cpp
  smti.cpp
  smti_grp.cpp
  )

IF(CPLEX_FOUND)
  SET(SOURCES ${SOURCES} smti_cplex.cpp)
ENDIF(CPLEX_FOUND)

ADD_LIBRARY(smti ${SOURCES})

IF(CPLEX_FOUND)
  ADD_DEFINITIONS(-DCPLEX_FOUND)
  TARGET_LINK_LIBRARIES(smti ${CPLEX_CONCERT_LIBRARY} ${CPLEX_ILO_LIBRARY} ${CPLEX_LIBRARY})
ENDIF(CPLEX_FOUND)

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main smti)
ADD_EXECUTABLE(convert_wpmaxsat convert_wpmaxsat.cpp)
TARGET_LINK_LIBRARIES(convert_wpmaxsat smti)
ADD_EXECUTABLE(pbo pbo.cpp)
TARGET_LINK_LIBRARIES(pbo smti)
ADD_EXECUTABLE(pbo_convert pbo_convert.cpp)
TARGET_LINK_LIBRARIES(pbo_convert smti)

